force-app/main/default/objects/ABN_Company_List__c/ABN_Company_List__c.object-meta.xml
<CustomObject>
    <label>ABN Company List</label>
    <nameField>
        <displayFormat>ABNCOM-{000000000}</displayFormat>
        <label>ABN Company List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABN Company Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>