force-app/main/default/objects/ABN_Company_List__c/fields/ABN_Company_Information__c.field-meta.xml
<CustomField>
    <fullName>ABN_Company_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABN Company Information</label>
    <referenceTo>ABN_Company_Information__c</referenceTo>
    <relationshipLabel>ABN Company Lists</relationshipLabel>
    <relationshipName>ABN_Company_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>