force-app/main/default/objects/ABN_Company_List__c/fields/ABN_Identifier_Value__c.field-meta.xml
<CustomField>
    <fullName>ABN_Identifier_Value__c</fullName>
    <label>ABN Identifier Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>