force-app/main/default/objects/ABN_Company_List__c/fields/Business_Organization_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Organization_Score__c</fullName>
    <label>Business Organization Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>