force-app/main/default/objects/ABN_Company_List__c/fields/GST_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>GST_Effective_From__c</fullName>
    <label>GST Effective From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>