force-app/main/default/objects/ABN_Company_List__c/fields/Main_Current_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Main_Current_Indicator__c</fullName>
    <label>Main Current Indicator</label>
    <length>2</length>
    <type>Text</type>
</CustomField>