force-app/main/default/objects/ABN_Company_List__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISNULL(Main_Organization_Name__c )) &amp;&amp; NOT(ISBLANK(Main_Organization_Name__c )), Main_Organization_Name__c +&#39; &#39; , &#39;&#39;)+IF(NOT(ISNULL(Trading_Organization_Name__c )) &amp;&amp; NOT(ISBLANK(Trading_Organization_Name__c )), Trading_Organization_Name__c +&#39; &#39; , &#39;&#39;)+IF(NOT(ISNULL(Business_Organization_Name__c )) &amp;&amp; NOT(ISBLANK(Business_Organization_Name__c )), Business_Organization_Name__c +&#39; &#39; , &#39;&#39;)+IF(NOT(ISNULL(Other_Trading_Organization_Name__c )) &amp;&amp; NOT(ISBLANK(Other_Trading_Organization_Name__c )), Other_Trading_Organization_Name__c , &#39;&#39;)+IF(NOT(ISNULL(Legal_FullName__c)) &amp;&amp; NOT(ISBLANK(Legal_FullName__c)), Legal_FullName__c+&#39; &#39; , &#39;&#39;)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>