force-app/main/default/objects/ABN_Company_List__c/fields/Other_Trading_Name_Score__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Name_Score__c</fullName>
    <label>Other Trading Name Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>