force-app/main/default/objects/ABN_Company_List__c/fields/Other_Trading_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Organization_Name__c</fullName>
    <label>Other Trading Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>