force-app/main/default/objects/ABN_Company_List__c/fields/Selected_for_ABN_Search__c.field-meta.xml
<CustomField>
    <fullName>Selected_for_ABN_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for ABN Search</label>
    <type>Checkbox</type>
</CustomField>